--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   sqflite: any
   path: any
   hive: ^2.2.3
-  hive_flutter: any
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.15
   flutter:
     sdk: flutter
 
